v7: Full integrasjon og design med API-støtte

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "infopage-skillhouse-ai-v7",
+  "name": "infopage-skillhouse-ai",
   "version": "1.0.0",
   "private": true,
   "scripts": {
