🎨 Gjenopprettet designbase før AI-integrasjon

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "infopage-skillhouse-ai",
+  "name": "infopage-skillhouse",
   "version": "1.0.0",
   "private": true,
   "scripts": {
