--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "infopage-skillhouse",
   "version": "1.0.0",
@@ -10,12 +9,12 @@
   },
   "dependencies": {
     "next": "12.2.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.6",
-    "postcss": "^8.4.14",
-    "autoprefixer": "^10.4.7"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8"
   }
 }
